<resources>
    <string name="app_name">WINGS V</string>
    <string name="home">Home</string>
    <string name="apps">Apps</string>
    <string name="sharing">Sharing</string>
    <string name="settings">Settings</string>
    <string name="about_app_title">About</string>
    <string name="about_app_summary">Version, developers, source code and licenses</string>
    <string name="onboarding_title">Prepare the app for use</string>
    <string name="onboarding_subtitle">Grant the required permissions</string>
    <string name="permission_notifications">Notifications</string>
    <string name="permission_notifications_summary">Required to notify you about proxy and VPN status</string>
    <string name="permission_battery">Battery optimization</string>
    <string name="permission_battery_summary">Disable optimization so the connection does not sleep in the background</string>
    <string name="permission_vpn">VPN connection</string>
    <string name="permission_vpn_summary">System permission to create a VPN tunnel</string>
    <string name="permission_vpn_always_on_hint">If Always-On VPN is enabled, disable it in system VPN settings and grant the permission again</string>
    <string name="permission_root">Root access</string>
    <string name="permission_root_summary">Optional. Required for root features, kernel WireGuard and VPN sharing</string>
    <string name="grant">Grant</string>
    <string name="check_label">Check</string>
    <string name="checking_label">Checking…</string>
    <string name="continue_label">Continue</string>
    <string name="first_launch_start">Start</string>
    <string name="first_launch_next">Next</string>
    <string name="first_launch_continue">Start using</string>
    <string name="first_launch_skip">Skip</string>
    <string name="first_launch_page_welcome_badge">Welcome</string>
    <string name="first_launch_page_welcome_title">WINGS V</string>
    <string name="first_launch_page_welcome_subtitle">Welcome to a unified client for Xray and VK TURN, created for fighting Russian Internet censorship, including whitelists</string>
    <string name="first_launch_connection_title">How do you want to connect?</string>
    <string name="first_launch_connection_description">Let\'s get you back to the Internet freedom!</string>
    <string name="first_launch_connection_vk_turn">VK TURN</string>
    <string name="first_launch_connection_xray">Xray (VLESS)</string>
    <string name="first_launch_connection_auto_search">Auto search</string>
    <string name="first_launch_connection_paste_clipboard">Paste from clipboard</string>
    <string name="first_launch_connection_scan_qr">Scan QR code</string>
    <string name="first_launch_vk_turn_title">VK TURN settings</string>
    <string name="first_launch_vk_turn_description">Fill in the connection parameters or import a ready WINGSV link</string>
    <string name="first_launch_vk_turn_import">Import wingsv://</string>
    <string name="first_launch_vk_turn_endpoint">Endpoint</string>
    <string name="first_launch_vk_turn_vk_link">VK Link</string>
    <string name="first_launch_vk_turn_threads">Threads</string>
    <string name="first_launch_vk_turn_use_udp">Use UDP</string>
    <string name="first_launch_vk_turn_no_obfuscation">No obfuscation</string>
    <string name="first_launch_vk_turn_wireguard_interface">WireGuard Interface</string>
    <string name="first_launch_vk_turn_wg_private_key">Private key</string>
    <string name="first_launch_vk_turn_wg_addresses">Addresses</string>
    <string name="first_launch_vk_turn_wg_dns">DNS</string>
    <string name="first_launch_vk_turn_wg_mtu">MTU</string>
    <string name="first_launch_vk_turn_wireguard_peer">WireGuard Peer</string>
    <string name="first_launch_vk_turn_wg_public_key">Public key</string>
    <string name="first_launch_vk_turn_wg_preshared_key">Preshared key (PSK)</string>
    <string name="first_launch_vk_turn_wg_allowed_ips">Allowed IPs</string>
    <string name="first_launch_vk_turn_import_invalid">No valid VK TURN wingsv:// link found in clipboard</string>
    <string name="first_launch_vk_turn_field_required">Required field</string>
    <string name="first_launch_vk_turn_field_number_error">Enter a number greater than zero</string>
    <string name="first_launch_vk_turn_endpoint_error">Enter endpoint as domain:port or IP:port</string>
    <string name="first_launch_vk_turn_validation_error">Check the VK TURN fields</string>
    <string name="first_launch_xray_title">Xray settings</string>
    <string name="first_launch_xray_description">Import a VLESS profile or set up basic Xray parameters</string>
    <string name="first_launch_xray_import_wingsv">Import wingsv://</string>
    <string name="first_launch_xray_import_vless">Import vless://</string>
    <string name="first_launch_xray_import_subscription">Import subscription URL</string>
    <string name="first_launch_xray_import_wingsv_invalid">No valid Xray wingsv:// link found in clipboard</string>
    <string name="first_launch_xray_import_vless_invalid">No valid vless:// link found in clipboard</string>
    <string name="first_launch_xray_import_subscription_invalid">No valid subscription URL found in clipboard</string>
    <string name="first_launch_auto_search_settings_title">Auto search</string>
    <string name="first_launch_auto_search_settings_description">Configure profile testing parameters before starting</string>
    <string name="first_launch_auto_search_mode_title">Auto search mode</string>
    <string name="first_launch_auto_search_mode_description">Choose how to test the available profiles</string>
    <string name="first_launch_auto_search_number_error">Enter a number from %1$d to %2$d</string>
    <string name="first_launch_auto_search_need_internet_title">Internet required</string>
    <string name="first_launch_auto_search_need_internet_summary">No local Xray profiles yet. Run auto search with Internet at least once so the app can fetch subscriptions, then try again</string>
    <string name="first_launch_auto_search_retry">Retry</string>
    <string name="first_launch_auto_search_back">Back</string>
    <string name="first_launch_auto_search_whitelist_wait_title">Connect to a whitelisted network</string>
    <string name="first_launch_auto_search_whitelist_wait_summary">Xray data is ready. Now connect to a whitelisted network and continue profile testing on it</string>
    <string name="first_launch_auto_search_whitelist_ready">I connected to a whitelist network</string>
    <string name="first_launch_done_title">Done!</string>
    <string name="first_launch_done_subtitle">Enjoy the free Internet!</string>
    <string name="first_launch_back_blocked">Finish initial setup to continue</string>
    <string name="first_launch_back_to_exit">Press back again to exit</string>
    <string name="status_granted">Permission granted</string>
    <string name="about_developers_section">Developers</string>
    <string name="about_sources_section">Source code and licenses</string>
    <string name="about_special_thanks_section">Special thanks to</string>
    <string name="about_source_code_title">Source code</string>
    <string name="about_source_code_summary">github.com/WINGS-N/WINGSV</string>
    <string name="about_licenses_title">Open-source licenses</string>
    <string name="about_licenses_summary">Main open-source components of the app</string>
    <string name="about_dev_wings_n_title">WINGS-N</string>
    <string name="about_dev_wings_n_summary">Yeah we never felt so young…</string>
    <string name="about_special_mygod_title">Mygod</string>
    <string name="about_special_mygod_summary">VPNHotspot, librootkotlinx and root tethering architecture</string>
    <string name="about_special_tribalfs_title">tribalfs</string>
    <string name="about_special_tribalfs_summary">oneui-design, sesl-androidx and SESL 8</string>
    <string name="about_special_samsung_title">Samsung</string>
    <string name="about_special_samsung_summary">creating One UI and interface design</string>
    <string name="about_special_yanndroid_title">Yanndroid</string>
    <string name="about_special_yanndroid_summary">early One UI Android libraries and UI architecture ideas</string>
    <string name="about_special_salvo_title">salvogiangri</string>
    <string name="about_special_salvo_summary">One UI modifications and joint SESL work</string>
    <string name="about_special_zx2c4_title">zx2c4</string>
    <string name="about_special_zx2c4_summary">WireGuard and Android tunnel backend</string>
    <string name="about_special_cacggghp_title">cacggghp</string>
    <string name="about_special_cacggghp_summary">author of vk-turn-proxy</string>
    <string name="settings_awg_quick_config_title">AWG config</string>
    <string name="settings_awg_quick_config_summary">awg-quick config</string>
    <string name="awg_settings_raw_category">RAW config</string>
    <string name="awg_settings_import_from_clipboard_title">Import from clipboard</string>
    <string name="awg_settings_import_from_clipboard_summary">Paste an awg-quick config from the clipboard and split it into fields</string>
    <string name="awg_settings_structured_info_title">Structured editor</string>
    <string name="awg_settings_structured_info_summary">Structured fields edit one Interface and the first Peer. For multi-peer configs, use RAW config</string>
    <string name="awg_settings_interface_category">Interface</string>
    <string name="awg_settings_peer_category">Peer</string>
    <string name="awg_settings_interface_private_key_title">Private key</string>
    <string name="awg_settings_interface_addresses_title">Address</string>
    <string name="awg_settings_interface_dns_title">DNS</string>
    <string name="awg_settings_interface_listen_port_title">ListenPort</string>
    <string name="awg_settings_interface_mtu_title">MTU</string>
    <string name="awg_settings_interface_jc_title">Jc</string>
    <string name="awg_settings_interface_jmin_title">Jmin</string>
    <string name="awg_settings_interface_jmax_title">Jmax</string>
    <string name="awg_settings_interface_s1_title">S1</string>
    <string name="awg_settings_interface_s2_title">S2</string>
    <string name="awg_settings_interface_s3_title">S3</string>
    <string name="awg_settings_interface_s4_title">S4</string>
    <string name="awg_settings_interface_h1_title">H1</string>
    <string name="awg_settings_interface_h2_title">H2</string>
    <string name="awg_settings_interface_h3_title">H3</string>
    <string name="awg_settings_interface_h4_title">H4</string>
    <string name="awg_settings_interface_i1_title">I1</string>
    <string name="awg_settings_interface_i2_title">I2</string>
    <string name="awg_settings_interface_i3_title">I3</string>
    <string name="awg_settings_interface_i4_title">I4</string>
    <string name="awg_settings_interface_i5_title">I5</string>
    <string name="awg_settings_peer_public_key_title">PublicKey</string>
    <string name="awg_settings_peer_preshared_key_title">PreSharedKey</string>
    <string name="awg_settings_peer_allowed_ips_title">AllowedIPs</string>
    <string name="awg_settings_peer_endpoint_title">Endpoint</string>
    <string name="awg_settings_peer_keepalive_title">PersistentKeepalive</string>
    <string name="federation_row_subscription_title">Subscription</string>
    <string name="federation_row_subscription_summary">The link the app updates itself from</string>
    <string name="wings_account_subscription_copy">Copy the link</string>
    <string name="federation_avatar_title">Profile picture</string>
    <string name="federation_avatar_camera">Camera</string>
    <string name="federation_avatar_gallery">Gallery</string>
    <string name="federation_avatar_cancel">Cancel</string>
    <string name="federation_avatar_save">Save</string>
    <string name="federation_avatar_reset">Remove the picture</string>
    <string name="federation_avatar_galaxy">Galaxy Avatar</string>
</resources>